cmake_minimum_required(VERSION 3.27)
project(CodeForces)

set(CMAKE_CXX_STANDARD 14)

add_executable(CodeForces helloWorld.cpp
        sumOfAB.cpp)
#add_executable(CodeForces )
#add_executable(CodeForces )
#add_executable(CodeForces )
#add_executable(CodeForces )
#add_executable(CodeForces )
#add_executable(CodeForces )
#add_executable(CodeForces )